--- a/package.json
+++ b/package.json
@@ -3,11 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.5",
+    "@chakra-ui/react": "^1.8.3",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@react-google-maps/api": "^2.7.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "comma-separated-values": "^3.6.4",
+    "encoding-japanese": "^1.0.30",
+    "firebase": "^9.6.6",
+    "framer-motion": "^5.6.0",
+    "jismesh-js": "^0.2.0",
+    "object-dig": "^0.1.3",
     "react": "^17.0.2",
+    "react-colorful": "^5.5.1",
+    "react-div-100vh": "^0.7.0",
     "react-dom": "^17.0.2",
+    "react-file-reader": "^1.1.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
